20171016 - Added auto-generated <replace> variables.
20171016 - Updated priorities, files in calendar/ will be read before root
           this supports a manual that is updated with patching
20171022 - Editing of files now supported (if web user has permissions)
         - Allow for sideview of html as typing
20171024 - removed option to set $COMPONETS, generated automatically
20171027 - Updated Security - Years are now taken into account for unlocking
           files.
20171028 - Initial Move to GITHUB!!!
20171030 - Updated Security - if the $ACCESS_FILE or $CLASS_FILE exist but
           are unreadable, show an error and do not provided any files to
           the students.
20171103 - BUG FIX: Updated directory read code to handle class event types that
           only appear in $COMBINE
         - Updated checks for access and virtual files.
         - Added the ability to set $LOCK = true, or $LOCK=filename which will
           prevent students from viewing content.
20171203 - Updated Security to a Challenge / Response concept with a SHA256
           password replacement on the client side.
20171208 - Added $CUSTOMCSS which allows for type specific custom CSS
20171217 - Added the ability for dynamic date based unlocking (based on the
           date that an item appears on the calendar impacted by some delta)
           Format in the access files is:
           class_1 -2
           The above would set the class to appear 2 days prior to the event
20171223 - BUG FIX: Safeguards in place to ensure calendar doesn't break if
           the access file is formated wrong with the new +/- support
20171223 - Added +/-sunday (or any other day of week)
20180106 - Added <showlink src=""> tag to provide link for curl usage
         - Modified access protocols, so next or last day_of_week will
           not change the day (from day of calendar) if you say last monday
           and it is currently already on a monday.